compiler/tests/compiler/must_fail/t_23.mil
// reuse the same number for different names

extern fn test(x : stack u64) -> stack u64 {
  x += $undef_param;
  return x;
}

/*
START:CMD
ARG="typecheck"
END:CMD
*/
